--- a/src/client/components/NavigationBar/style.scss
+++ b/src/client/components/NavigationBar/style.scss
@@ -74,8 +74,7 @@ $blackcolor: #000;
     }
 
     a {
-      height: 100%;
-      margin-bottom: .5em;
+      margin: .5em 0;
       justify-content: space-between;
       flex: 1;
     }
