--- a/src/client/components/Post/style.scss
+++ b/src/client/components/Post/style.scss
@@ -12,6 +12,7 @@
   @media (max-width: 480px) {
     min-width: 320px;
     width: 100%;
+    top: 0;
   }
 
   .post-comment-container {
